app-test/testdata/typesystem/neg/type-comparison-list-type-with-any-type/check/cmp1.check
Error in "testdata/typesystem/neg/type-comparison-list-type-with-any-type/src/cmp.cal" on line 4:
            OUT <-- [1, 2, 3] = false; // error
                    ^^^^^^^^^^^^^^^^^
= is not supported with List(type:uint(size=2), size=3) and bool.